--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
 .App {
+  font-family: 'Poppins', sans-serif;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  width: 100%;
+  background:#f7fdff;
+  color: #455D73;
 }
 
-.App-link {
-  color: #09d3ac;
+.App img {
+  border-radius: 6px;
+  transition: box-shadow .3s ease-out;
+  box-shadow: 0 0 10px 1px #e4e4e4;
+}
+
+.App img:hover {
+  box-shadow: 0 0 5px 1px #e4e4e4;
 }
