--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,14 @@
   justify-content: center;
   height: 100vh;
   width: 100%;
-  background:#f7fdff;
-  color: #455D73;
+  /* background:#f7fdff; */
+  color: rgb(32, 50, 66);
 }
 
 .App img {
   border-radius: 6px;
   transition: box-shadow .3s ease-out;
-  box-shadow: 0 0 10px 1px #e4e4e4;
-}
-
-.App img:hover {
-  box-shadow: 0 0 5px 1px #e4e4e4;
+  box-shadow: 0 0 15px 9px white;
+  margin: 20px;
+  background-color: white;
 }
