--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
 
 .App {
   font-family: 'Poppins', sans-serif;
-  text-align: center;
+  /* text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   height: 100vh;
   width: 100%;
   /* background:#f7fdff; */
@@ -14,9 +14,6 @@
 }
 
 .App img {
-  border-radius: 6px;
   transition: box-shadow .3s ease-out;
-  box-shadow: 0 0 15px 9px white;
   margin: 20px;
-  background-color: white;
 }
