Minor responsive changes

--- a/src/components/less/content0.less
+++ b/src/components/less/content0.less
@@ -18,8 +18,16 @@
     >.description {
       display: flex;
       align-items: center;
-      width: 1080px;
+      max-width: 1080px;
       margin: 0 auto 60px;
+      border-bottom: 1px solid #bfbfbf;
+      @media @tablet-down{
+          flex-direction: column-reverse;
+      }
+      img {
+        width: 30%;
+        min-width: 300px;
+      }
       p {
         flex: 1;
       }
@@ -29,6 +37,7 @@
         position: relative;
         margin: 0 auto 48px;
         width: 50%;
+        @media @tablet-down { display: none; }
         .Tilt{
           width: 100%;
           height: calc(50vw - 50vw/3);
@@ -93,6 +102,7 @@
       text-align: center;
       min-height: 200px;
       margin-bottom: 24px;
+      @media @tablet-down { margin-bottom: 75px; }
       img {
         width: 100%;
       }
