--- a/src/components/less/custom.less
+++ b/src/components/less/custom.less
@@ -17,8 +17,14 @@
 
 @animate-duration: .45s;
 
-/* 详细页图片或框框的样式;
+/* BREAK POINTS
 */
+@wide-screen-down: ~'(max-width: 1199px)';
+@desktop-down: ~'(max-width: 991px)';
+@tablet-down: ~'(max-width: 767px)';
+@phone-down: ~'(max-width: 480px)';
+@small-phone-down: ~'(max-width: 320px)';
+
 .page-shadow() {
   box-shadow: 0 5px 8px @shadow-color;
 }
