--- a/src/app.less
+++ b/src/app.less
@@ -7,6 +7,9 @@
 @import './components/less/contact.less';
 @import './components/less/footer.less';
 
+html {
+  scroll-behavior: smooth;
+}
 
 .App {
   font-family: 'Poppins', sans-serif;
