changes here and there

--- a/src/components/less/content0.less
+++ b/src/components/less/content0.less
@@ -19,7 +19,8 @@
       display: flex;
       align-items: center;
       max-width: 1080px;
-      margin: 0 auto 60px;
+      margin: 0 auto 50px;
+      padding: 0px 0 50px;
       border-bottom: 1px solid #bfbfbf;
       @media @tablet-down{
           flex-direction: column-reverse;
@@ -69,6 +70,7 @@
         .label1,.label2,.label3 {
           position: absolute;
           text-transform: uppercase;
+          text-shadow: -1px 1px 0px black;
         }
         // .point1 {
         //     top: 35%;
