--- a/src/components/less/jumbo.less
+++ b/src/components/less/jumbo.less
@@ -134,6 +134,9 @@
       top: 0;
       right: 0;
       margin: 132px 0 0;
+      .panels {
+        display: none;
+      }
       .cloud2 {
         left: 75%;
       }
